# llm-app-shield

./: .gitignore  .llmappignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  llm-security.yml  main.yml
examples/: demo_scan.py
examples/reports/: sample-report.html  sample-report.json
examples/vulnerable_apps/: langchain_chatbot.py  openai_app.ts  rag_app.py
llmapp_shield/: __init__.py  cli.py  models.py  scanner.py
llmapp_shield/detectors/: __init__.py  data_leak.py  excessive_agency.py  insecure_output.py  jailbreak.py  prompt_injection.py  rag_security.py  secret_exposure.py
llmapp_shield/report/: __init__.py  renderer.py
llmapp_shield/rules/: __init__.py  loader.py
llmapp_shield/rules/definitions/: prompt_injection.yml
llmapp_shield/utils/: __init__.py  file_utils.py  ignore.py  llm_judge.py
tests/: conftest.py  test_detectors.py  test_scanner.py
